syntax = "proto3";

import "shared.proto";

package competition;

option go_package = "/;proto";

service Competition {
	rpc GetProblems(shared.ProblemStreamRequest) returns (stream shared.ProblemStream) {}

	rpc GetSolutions(GetSolutionsRequest) returns (stream GetSolutionsResponse) {}
	rpc SetSolutions(SetSolutionsRequest) returns (SetSolutionsResponse) {}

	rpc GetTimes(GetTimesRequest) returns (stream GetTimesResponse) {}
}

message GetProblemsRequest {
}

message GetSolutionsRequest {
}

message GetSolutionsResponse {
	enum Modification {
		k_CHANGE = 0;
		k_DELETE = 1;
	}

	string id = 1;
	Modification type = 2;
	int64 value = 3;
}

message SetSolutionsRequest {
	string id = 1;
	int64 value = 2;
	bool delete = 3;
}

message SetSolutionsResponse {
}

message GetTimesRequest {
}

message GetTimesResponse {
	string start = 1; //RFC3339
	string end = 2; //RFC3339
}
